// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Tabs.Item checkGrammar=false 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkGrammar=true 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkHighlight=false 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkHighlight=true 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkSpaces=false 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkSpaces=true 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item className="my-classname" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="brown" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="brown-rich" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="cyan" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="cyan-rich" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="default" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="green" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="green-rich" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="grey" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="grey-rich" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="orange" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="orange-rich" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="pink" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="pink-rich" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="purple" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="purple-rich" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="red" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="red-rich" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="yellow" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema="yellow-rich" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Tabs.Item content=12345 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Tabs.Item controlled=false 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item controlled=true 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item default props 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item disabled=false 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item disabled=true 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Tabs.Item docKit examples UU5.Bricks.Tabs.Item should render without crash 1`] = `
<Fragment>
  <div
    className="uu5-bricks-tabs uu5-bricks-tabs-list-size-m"
    id="uuID01"
    style={Object {}}
    title={null}
  >
    <ul
      className="uu5-bricks-tabs-list uu5-bricks-tabs-list-tabs"
    >
      <li
        className="uu5-bricks-tabs-list-active"
        key="0"
      >
        <Button
          bgStyle="transparent"
          content="Tab 1"
          ref_={[Function]}
        />
      </li>
      <li
        key="1"
      >
        <Button
          bgStyle="transparent"
          content="Tab 2"
          onClick={[Function]}
          ref_={[Function]}
        />
      </li>
      <li
        key="2"
      >
        <Button
          bgStyle="transparent"
          content="Tab 3"
          onClick={[Function]}
          ref_={[Function]}
        />
      </li>
      <Line
        colorSchema="custom"
        size="1px"
      />
    </ul>
    <div
      className="uu5-bricks-tabs-list-content"
    >
      <tabs-item
        _active={true}
        _fade={true}
        getButton={[Function]}
        header="Tab 1"
        id="uuID"
        key="uuID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </tabs-item>
      <tabs-item
        _fade={true}
        getButton={[Function]}
        header="Tab 2"
        id="uuID2"
        key="uuID2"
      >
        torquent per conubia nostra, per inceptos hymenaeos. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est.
      </tabs-item>
      <tabs-item
        _fade={true}
        getButton={[Function]}
        header="Tab 3"
        id="uuID3"
        key="uuID3"
      >
        torquent per conubia nostra, per inceptos hymenaeos. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. torquent per conubia nostra, per inceptos hymenaeos. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est.
      </tabs-item>
    </div>
  </div>
</Fragment>
`;

exports[`UU5.Bricks.Tabs.Item dynamic=false 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item dynamic=true 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item footer={"type":"div","key":null,"ref":null,"props":{"children":"Footer of section"},"_owner":null,"_store":{}} 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item header={"type":"div","key":null,"ref":null,"props":{"children":"Header of section"},"_owner":null,"_store":{}} 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item hidden=false 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item hidden=true 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item id="myId" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level="0" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level="1" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level="2" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level="3" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level="4" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level="5" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level="6" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level=0 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level=1 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level=2 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level=3 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level=4 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level=5 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level=6 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item name="Summer" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  name="Summer"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Tabs.Item nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel="smallBox" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel="smallBoxCollection" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item noIndex=false 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item noIndex=true 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item pureRender=false 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item pureRender=true 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item selected=false 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item selected=true 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item textCorrector=false 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item textCorrector=true 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;

exports[`UU5.Bricks.Tabs.Item underline=false 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item underline=true 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;
